[package]
name = "pricing_daemon"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mongodb = "2.0.1"
tokio = { version = "1.0.1", features = ["time", "macros", "rt-multi-thread"]}
serde = { version = "1.0", features = ["derive"] }
async-trait = "0.1.42"
chrono = { version = "0.4.19", features = ["serde"] }
bson = "2.0.1"
kraken_rest_api = "0.1.0"
log = "0.4"
pretty_env_logger = "0.2"
env_logger = "0.5"
dotenv = "0.13"
clap = "2.32"
serde_json = "1.0.61"
futures = "0.3.17"
